@@ -1,3 +1,9 @@
+2007-11-11  Sanel <karijes@users.sourceforge.net>
+
+	* In list added sort() method, with tests
+	* TODO entry
+	* ICON_CONTEXT_EMBLEM added to IconTheme
+
 2007-11-5  Sanel <karijes@users.sourceforge.net>
 
 	* In Window added another way of updating data via external (from other
